objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the related Account Name for the Partner Quote</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Partner_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBN_Status__c</fullName>
        <description>Describes CBN Status</description>
        <label>CBN Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCW_Deal_Status_MQ__c</fullName>
        <label>CCW Deal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCW_Deal_Status__c</fullName>
        <description>Notice the difference in the Field name and label</description>
        <formula>Opportunity_Name__r.Partner_Deal_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCW Deal Status_old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Quote_ID__c</fullName>
        <description>ID of the quotes from DM</description>
        <externalId>true</externalId>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Displays the Deal ID for the associated Partner Quote</description>
        <formula>Opportunity_Name__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <description>CCW Deal Source</description>
        <formula>Opportunity_Name__r.Deal_Source__c</formula>
        <label>Deal Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>Opportunity Deal Type</description>
        <formula>Opportunity_Name__r.Deal_Type__c</formula>
        <label>Deal Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Describes Date of Expiry</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiated_By__c</fullName>
        <description>Formula field which determines who initiated the Quote.</description>
        <formula>IF(Opportunity_Name__r.RecordTypeId == $Setup.ObjectRecordTypeIds__c.Opportunity_Parent_RecordTypeId__c ,'Cisco',
IF(Opportunity_Name__r.RecordTypeId == $Setup.ObjectRecordTypeIds__c.Opportunity_Phase_RecordTypeId__c ,'Cisco',
IF(Opportunity_Name__r.RecordTypeId ==  $Setup.ObjectRecordTypeIds__c.Opportunity_Global_RecordTypeId__c ,'Cisco',
IF(Opportunity_Deal_Type__c == $Setup.DRTM_Deal_Type__c.DealType__c,'End Customer',
IF(Opportunity_Deal_Type__c == $Setup.DRTM_Deal_Type__c.Non_std_Deal__c ,'End Customer','Partner')))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrate_Status__c</fullName>
        <label>Integrate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Quote__c</fullName>
        <description>Check whether the quote is integrated or not</description>
        <formula>IF(
DM_Quote_ID__c = Opportunity_Name__r.CCW_BOM_Integrated_Quote_Id__c ,'Yes',
'No'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Collaborated__c</fullName>
        <description>Including this field as part of Q1FY13 release. Data in this field will be Y or N. It will be used only for reporting purpose. Hence not on UI</description>
        <label>Quote Collaborated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Dummy_Quote__c</fullName>
        <description>checks if the quote is dummy or not.
Created for MQ release.</description>
        <label>Is Dummy Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Finalized__c</fullName>
        <description>Created during MQ Release for Getting finalized quote count in the homepage mes section</description>
        <label>Is Finalized</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Status__c</fullName>
        <description>Notice the difference in the Field name and label</description>
        <formula>Opportunity_Name__r.DD_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Deal_ID__c</fullName>
        <description>Stores the Opty Id of the Quote which is deleted</description>
        <label>Old Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Partner_Account_ID__c</fullName>
        <description>Field will be created to save old partner account ID on the deleted Quote</description>
        <label>Old Partner Account ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Deal_Type__c</fullName>
        <description>formula field to copy deal type from opportunity object to its corresponding Quote</description>
        <formula>Opportunity_Name__r.Deal_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Deal Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Displays the Opportunity Name for the associated Partner Quote</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Partner_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner1__c</fullName>
        <formula>Opportunity_Name__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Displays the Opportunity Status for the associated Partner Quote</description>
        <formula>CASE(Opportunity_Name__r.Opportunity_Status__c, 'Active', 'Active','')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerAcctId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the Partner Account ID</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_del__c</fullName>
        <description>Displays the Partner for the associated Partner Quote</description>
        <formula>Opportunity_Name__r.Primary_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Flags__c</fullName>
        <description>The list of all flags applied to this Quote object.
'Archived' indicates that the quote has been archived in CCW and is only available by opening a case</description>
        <inlineHelpText>The list of all flags applied to this Quote object.
'Archived' indicates that the quote has been archived in CCW and is only available by opening a case</inlineHelpText>
        <label>Quote Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Last_Modified_By__c</fullName>
        <description>Populated from Cisco Commerce Workspace</description>
        <label>Quote Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Last_Updated__c</fullName>
        <description>Populated from Cisco Commerce Workspace</description>
        <label>Quote Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Product_List_Amount__c</fullName>
        <label>Quote Product List Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Product_Net_Amount__c</fullName>
        <description>Release: P360 March 2013</description>
        <label>Quote Product Net Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Service_List_Amount__c</fullName>
        <label>Quote Service List Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Service_Net_Amount__c</fullName>
        <label>Quote Service Net Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <description>This field shows which of the quote is finalized by the End User in Multiple Quote scenario.</description>
        <inlineHelpText>If a opportunity is having three quotes then Only One Quote can be 'Finalized'. Remaining al quote will be 'Unfinalized'</inlineHelpText>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unfinalized</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Summary_Link__c</fullName>
        <formula>IF(Opportunity_Deal_Type__c ==  $Setup.DRTM_Deal_Type__c.DealType__c,
'No Quote Summary', 
IF(Opportunity_Deal_Type__c == $Setup.DRTM_Deal_Type__c.Non_std_Deal__c, 
'No Quote Summary',
HYPERLINK("/" + Quote_Summary__c , 'Quote Summary','_blank')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the associated Quote Summary on Partner Quote</description>
        <label>Quote Summary</label>
        <referenceTo>Quote_Summary__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Partner_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Account_View__c</fullName>
        <formula>Opportunity_Name__r.Account_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Account View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>Opportunity_Name__r.Territory2.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <description>Quote Header information.  Used in related lists.  Quote details stored in PDR.</description>
    <label>Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Active_Opportunity_Quotes</fullName>
        <columns>Deal_ID__c</columns>
        <columns>NAME</columns>
        <columns>DM_Quote_ID__c</columns>
        <columns>Quote_Summary__c</columns>
        <columns>Initiated_By__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>PartnerAcctId__c</columns>
        <columns>Quote_Last_Updated__c</columns>
        <columns>Quote_Last_Modified_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Opportunity Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Deal_ID__c</columns>
        <columns>NAME</columns>
        <columns>DM_Quote_ID__c</columns>
        <columns>Quote_Summary__c</columns>
        <columns>Initiated_By__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>PartnerAcctId__c</columns>
        <columns>Quote_Last_Updated__c</columns>
        <columns>Quote_Last_Modified_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cisco_Initiated_Quotes</fullName>
        <columns>Deal_ID__c</columns>
        <columns>NAME</columns>
        <columns>DM_Quote_ID__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>PartnerAcctId__c</columns>
        <columns>Quote_Last_Updated__c</columns>
        <columns>Quote_Last_Modified_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DM_Quote_ID__c</field>
            <operation>equals</operation>
            <value>4718246444</value>
        </filters>
        <label>Cisco Initiated Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cloud_SaaS_change_Subscription_Quotes</fullName>
        <columns>Deal_ID__c</columns>
        <columns>NAME</columns>
        <columns>DM_Quote_ID__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Quote_Last_Updated__c</columns>
        <columns>Quote_Last_Modified_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Source__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>Cloud/SaaS change Subscription Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>Deal_ID__c</columns>
        <columns>NAME</columns>
        <columns>DM_Quote_ID__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Partner_del__c</columns>
        <columns>Quote_Last_Updated__c</columns>
        <columns>Quote_Last_Modified_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Initiated_Quotes</fullName>
        <columns>Deal_ID__c</columns>
        <columns>NAME</columns>
        <columns>DM_Quote_ID__c</columns>
        <columns>Quote_Summary__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>PartnerAcctId__c</columns>
        <columns>Quote_Last_Updated__c</columns>
        <columns>Quote_Last_Modified_By__c</columns>
        <columns>Initiated_By__c</columns>
        <columns>Sales_Account_View__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initiated_By__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <filters>
            <field>CCW_Deal_Status_MQ__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <label>Partner Initiated Quotes_1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Quotes_not_enabled_for_ordering</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5 AND 6 AND 7</booleanFilter>
        <columns>DM_Quote_ID__c</columns>
        <columns>NAME</columns>
        <columns>Deal_ID__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Partner_del__c</columns>
        <columns>Quote_Summary__c</columns>
        <columns>CCW_Deal_Status_MQ__c</columns>
        <columns>Non_Standard_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CCW_Deal_Status_MQ__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <filters>
            <field>CCW_Deal_Status_MQ__c</field>
            <operation>equals</operation>
            <value>Re-Opened</value>
        </filters>
        <filters>
            <field>CCW_Deal_Status_MQ__c</field>
            <operation>equals</operation>
            <value>Not Submitted</value>
        </filters>
        <filters>
            <field>CCW_Deal_Status_MQ__c</field>
            <operation>equals</operation>
            <value>Approved Not Ready to Order</value>
        </filters>
        <filters>
            <field>Is_Finalized__c</field>
            <operation>equals</operation>
            <value>N</value>
        </filters>
        <filters>
            <field>Non_Standard_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>DM_Quote_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Quotes not enabled for ordering</label>
        <language>en_US</language>
    </listViews>
</CustomObject>